// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ruleCanOnlyBeValue: easy mode 1`] = `
"1    ┌─┐  ┌─┐  ┃  ┌─┐  1     2   ┃  ┌─┐  ┌─┐   2 
     │4│  │5│  ┃  │9│    6       ┃  │3│  │8│     
     └─┘  └─┘  ┃  └─┘            ┃  └─┘  └─┘  7  
               ┃                 ┃               
┌─┐    3    3  ┃  1    1     2   ┃       ┌─┐   2 
│6│            ┃        5    5   ┃  4    │9│     
└─┘  7         ┃        8    8   ┃  7    └─┘  7  
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  1    ┌─┐
│2│  │9│  │8│  ┃  │3│  │7│  │4│  ┃  │5│       │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘       └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃       ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │1│  │7│  ┃  4    │9│  │6│  ┃  │8│  │2│  │3│
└─┘  └─┘  └─┘  ┃       └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
  3    3    3  ┃  ┌─┐  1      3  ┃       ┌─┐  ┌─┐
            6  ┃  │2│            ┃       │5│  │4│
  9         9  ┃  └─┘   8    8   ┃  7    └─┘  └─┘
               ┃                 ┃               
┌─┐   23  ┌─┐  ┃  ┌─┐         3  ┃  ┌─┐  ┌─┐  ┌─┐
│8│       │4│  ┃  │7│   5    5   ┃  │1│  │6│  │9│
└─┘       └─┘  ┃  └─┘            ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │6│  │2│  ┃  │5│  │3│  │1│  ┃  │9│  │4│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐            ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│   5        ┃  │8│  │2│  │7│  ┃  │6│  │3│  │1│
└─┘         9  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
  3  ┌─┐  ┌─┐  ┃            ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
     │8│  │1│  ┃  4 6  4 6  │9│  ┃  │2│  │7│  │5│
     └─┘  └─┘  ┃            └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`ruleCanOnlyBeValue: easy mode complete 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │4│  │5│  ┃  │9│  │6│  │2│  ┃  │3│  │8│  │7│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│6│  │7│  │3│  ┃  │1│  │8│  │5│  ┃  │4│  │9│  │2│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│2│  │9│  │8│  ┃  │3│  │7│  │4│  ┃  │5│  │1│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │1│  │7│  ┃  │4│  │9│  │6│  ┃  │8│  │2│  │3│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│9│  │3│  │6│  ┃  │2│  │1│  │8│  ┃  │7│  │5│  │4│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│8│  │2│  │4│  ┃  │7│  │5│  │3│  ┃  │1│  │6│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │6│  │2│  ┃  │5│  │3│  │1│  ┃  │9│  │4│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│  │5│  │9│  ┃  │8│  │2│  │7│  ┃  │6│  │3│  │1│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │8│  │1│  ┃  │6│  │4│  │9│  ┃  │2│  │7│  │5│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`ruleCanOnlyBeValue: empty board 1`] = `
"123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789"
`;

exports[`ruleCanOnlyBeValue: full row 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │2│  │3│  ┃  │4│  │5│  │6│  ┃  │7│  │8│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
               ┃  123  123  123  ┃  123  123  123
456  456  456  ┃                 ┃  456  456  456
789  789  789  ┃  789  789  789  ┃               
               ┃                 ┃               
               ┃  123  123  123  ┃  123  123  123
456  456  456  ┃                 ┃  456  456  456
789  789  789  ┃  789  789  789  ┃               
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 "
`;

exports[`ruleCanOnlyBeValue: hard board stuck 1`] = `
"1 3   23  123  ┃  ┌─┐  12   12   ┃  123  1 3   23
 5    56   56  ┃  │4│    6    6  ┃        5    5 
789  7 9  7 9  ┃  └─┘    9  7    ┃       7    7  
               ┃                 ┃               
1 3   23  123  ┃   2   12   ┌─┐  ┃  123  ┌─┐  ┌─┐
 5    5   45   ┃            │8│  ┃       │9│  │6│
7    7    7    ┃  7         └─┘  ┃       └─┘  └─┘
               ┃                 ┃               
1     2   12   ┃   2   ┌─┐  ┌─┐  ┃  12   ┌─┐   2 
       6  4 6  ┃    6  │5│  │3│  ┃       │8│  4  
7 9  7 9  7 9  ┃  7    └─┘  └─┘  ┃       └─┘  7  
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
1 3  ┌─┐  ┌─┐  ┃   23  123  12   ┃   23    3   23
 5   │4│  │8│  ┃   56    6   56  ┃    6    6     
7 9  └─┘  └─┘  ┃  7         7    ┃       7    7  
               ┃                 ┃               
┌─┐    3    3  ┃    3  ┌─┐  ┌─┐  ┃    3    3  ┌─┐
│2│   5    5   ┃   56  │4│  │9│  ┃    6    6  │1│
└─┘  7    7    ┃  78   └─┘  └─┘  ┃   8   7    └─┘
               ┃                 ┃               
┌─┐    3  1 3  ┃   23  123  12   ┃  ┌─┐    3  ┌─┐
│6│            ┃                 ┃  │5│  4    │9│
└─┘  7    7    ┃  78    8   7    ┃  └─┘  7    └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐   23   23  ┃  ┌─┐   23   2   ┃  ┌─┐    3    3
│4│   56   56  ┃  │1│    6   56  ┃  │7│   56   5 
└─┘    9    9  ┃  └─┘   8        ┃  └─┘        8 
               ┃                 ┃               
  3  ┌─┐   23  ┃  ┌─┐   23   2   ┃  ┌─┐  1 3    3
 5   │8│   56  ┃  │9│    6   56  ┃  │4│   56   5 
7    └─┘  7    ┃  └─┘            ┃  └─┘          
               ┃                 ┃               
  3  ┌─┐    3  ┃    3  ┌─┐       ┃    3  ┌─┐    3
 5   │1│   56  ┃   56  │7│  456  ┃    6  │2│   5 
  9  └─┘    9  ┃   8   └─┘       ┃   89  └─┘   8 "
`;

exports[`ruleCanOnlyBeValue: multiple gets in one go 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃                 ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │2│  │3│  ┃  456  456  456  ┃  │7│  │8│  │9│
└─┘  └─┘  └─┘  ┃                 ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  123  123  123  ┃  123  123  123
│4│  │5│  │6│  ┃                 ┃               
└─┘  └─┘  └─┘  ┃  789  789  789  ┃               
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  123  123  123  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │8│  │9│  ┃                 ┃  │4│  │5│  │6│
└─┘  └─┘  └─┘  ┃                 ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  45 
 89  7 9  78   ┃  789  789  789  ┃   89    9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  45 
 89  7 9  78   ┃  789  789  789  ┃   89    9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  ┌─┐
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  │7│
 89    9   8   ┃   89   89   89  ┃   89    9  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  45 
 89  7 9  78   ┃  789  789  789  ┃    9  7 9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  45 
 89  7 9  78   ┃  789  789  789  ┃    9  7 9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  ┌─┐
 56  4 6  45   ┃  456  456  456  ┃   56  4 6  │8│
  9  7 9  7    ┃  7 9  7 9  7 9  ┃    9  7 9  └─┘"
`;

exports[`ruleCanOnlyBeValue: three constraints 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃                 ┃            ┌─┐
│1│  │2│  │3│  ┃  456  456  456  ┃            │9│
└─┘  └─┘  └─┘  ┃  78   78   78   ┃  78   78   └─┘
               ┃                 ┃               
               ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃               
789  789  789  ┃  789  789  789  ┃  78   78      
               ┃                 ┃               
               ┃  123  123  123  ┃  ┌─┐  ┌─┐  ┌─┐
               ┃                 ┃  │4│  │5│  │6│
789  789  789  ┃  789  789  789  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃   56  4 6  45 
789  789  789  ┃  789  789  789  ┃   89   89     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃   56  4 6  45 
789  789  789  ┃  789  789  789  ┃   89   89     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  ┌─┐
456  456  456  ┃  456  456  456  ┃   56  4 6  │7│
 89   89   89  ┃   89   89   89  ┃   89   89  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃   56  4 6  45 
789  789  789  ┃  789  789  789  ┃  7 9  7 9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃   56  4 6  45 
789  789  789  ┃  789  789  789  ┃  7 9  7 9     
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  ┌─┐
456  456  456  ┃  456  456  456  ┃   56  4 6  │8│
7 9  7 9  7 9  ┃  7 9  7 9  7 9  ┃  7 9  7 9  └─┘"
`;

exports[`ruleOnlyCellCanBeValue: [0, 2] = 3 1`] = `
"12   12   ┌─┐  ┃  12   12   12   ┃  12   12   12 
456  456  │3│  ┃  456  456  456  ┃  456  456  456
789  789  └─┘  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
12   12   12   ┃  12   12   12   ┃  12   12   ┌─┐
456  456  456  ┃  456  456  456  ┃  456  456  │3│
789  789  789  ┃  789  789  789  ┃  789  789  └─┘
               ┃                 ┃               
12   12   12   ┃  12   12   ┌─┐  ┃  12   12   12 
456  456  456  ┃  456  456  │3│  ┃  456  456  456
789  789  789  ┃  789  789  └─┘  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
12   ┌─┐  12   ┃  12   12   12   ┃  12   12   12 
456  │3│  456  ┃  456  456  456  ┃  456  456  456
789  └─┘  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
12   12   12   ┃  123  123  12   ┃  123  123  12 
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
12   12   12   ┃  123  123  12   ┃  123  123  12 
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  12   12   ┃  12   12   12   ┃  12   12   12 
│3│  456  456  ┃  456  456  456  ┃  456  456  456
└─┘  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
12   12   12   ┃  123  123  12   ┃  123  123  12 
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
12   12   12   ┃  123  123  12   ┃  123  123  12 
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789"
`;

exports[`ruleOnlyCellCanBeValue: easy board 1`] = `
"┌─┐  ┌─┐       ┃  ┌─┐  ┌─┐   2   ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │4│   5   ┃  │9│  │6│   5   ┃  │3│  │8│  │7│
└─┘  └─┘       ┃  └─┘  └─┘       ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐    3  ┃  1    1     2   ┃  ┌─┐  ┌─┐   2 
│6│  │7│   5   ┃             5   ┃  │4│  │9│     
└─┘  └─┘       ┃        8    8   ┃  └─┘  └─┘     
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│2│  │9│  │8│  ┃  │3│  │7│  │4│  ┃  │5│  │1│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │1│  │7│  ┃  │4│  │9│  │6│  ┃  │8│  │2│  │3│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐    3  ┌─┐  ┃  ┌─┐  1         ┃  ┌─┐  ┌─┐  ┌─┐
│9│       │6│  ┃  │2│            ┃  │7│  │5│  │4│
└─┘       └─┘  ┃  └─┘   8    8   ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  1    ┌─┐  ┌─┐
│8│  │2│  │4│  ┃  │7│  │5│  │3│  ┃       │6│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃       └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │6│  │2│  ┃  │5│  │3│  │1│  ┃  │9│  │4│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐       ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│   5   │9│  ┃  │8│  │2│  │7│  ┃  │6│  │3│  │1│
└─┘       └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │8│  │1│  ┃  │6│  │4│  │9│  ┃  │2│  │7│  │5│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`ruleOnlyCellCanBeValue: easy board complete 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │4│  │5│  ┃  │9│  │6│  │2│  ┃  │3│  │8│  │7│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│6│  │7│  │3│  ┃  │1│  │8│  │5│  ┃  │4│  │9│  │2│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│2│  │9│  │8│  ┃  │3│  │7│  │4│  ┃  │5│  │1│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │1│  │7│  ┃  │4│  │9│  │6│  ┃  │8│  │2│  │3│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│9│  │3│  │6│  ┃  │2│  │1│  │8│  ┃  │7│  │5│  │4│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│8│  │2│  │4│  ┃  │7│  │5│  │3│  ┃  │1│  │6│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │6│  │2│  ┃  │5│  │3│  │1│  ┃  │9│  │4│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│  │5│  │9│  ┃  │8│  │2│  │7│  ┃  │6│  │3│  │1│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │8│  │1│  ┃  │6│  │4│  │9│  ┃  │2│  │7│  │5│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`ruleOnlyCellCanBeValue: hard board 1`] = `
"┌─┐   23  123  ┃  ┌─┐  ┌─┐  12   ┃  123    3   23
│8│   56   56  ┃  │4│  │9│    6  ┃        5    5 
└─┘  7    7    ┃  └─┘  └─┘  7    ┃       7    7  
               ┃                 ┃               
1 3   23  ┌─┐  ┃   2   12   ┌─┐  ┃  123  ┌─┐  ┌─┐
 5    5   │4│  ┃            │8│  ┃       │9│  │6│
7    7    └─┘  ┃  7         └─┘  ┃       └─┘  └─┘
               ┃                 ┃               
1     2   12   ┃   2   ┌─┐  ┌─┐  ┃  12   ┌─┐  ┌─┐
       6    6  ┃    6  │5│  │3│  ┃       │8│  │4│
7    7 9  7 9  ┃  7    └─┘  └─┘  ┃       └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃   23  123  12   ┃   23    3   23
│9│  │4│  │8│  ┃   56    6   56  ┃    6    6     
└─┘  └─┘  └─┘  ┃  7         7    ┃       7    7  
               ┃                 ┃               
┌─┐    3    3  ┃    3  ┌─┐  ┌─┐  ┃  ┌─┐    3  ┌─┐
│2│   5    5   ┃   56  │4│  │9│  ┃  │8│    6  │1│
└─┘  7    7    ┃  7    └─┘  └─┘  ┃  └─┘  7    └─┘
               ┃                 ┃               
┌─┐    3  1 3  ┃   23  123  12   ┃  ┌─┐  ┌─┐  ┌─┐
│6│            ┃                 ┃  │5│  │4│  │9│
└─┘  7    7    ┃  78    8   7    ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐   23   23  ┃  ┌─┐   23   2   ┃  ┌─┐    3    3
│4│   56   56  ┃  │1│    6   56  ┃  │7│   56   5 
└─┘    9    9  ┃  └─┘   8        ┃  └─┘        8 
               ┃                 ┃               
  3  ┌─┐   23  ┃  ┌─┐   23   2   ┃  ┌─┐  ┌─┐    3
 5   │8│   56  ┃  │9│    6   56  ┃  │4│  │1│   5 
7    └─┘  7    ┃  └─┘            ┃  └─┘  └─┘     
               ┃                 ┃               
  3  ┌─┐    3  ┃    3  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐    3
 5   │1│   56  ┃   56  │7│  │4│  ┃  │9│  │2│   5 
     └─┘       ┃   8   └─┘  └─┘  ┃  └─┘  └─┘   8 "
`;

exports[`ruleOnlyCellCanBeValue: hard board complete 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│8│  │2│  │3│  ┃  │4│  │9│  │6│  ┃  │1│  │5│  │7│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │5│  │4│  ┃  │2│  │1│  │8│  ┃  │3│  │9│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │6│  │9│  ┃  │7│  │5│  │3│  ┃  │2│  │8│  │4│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│9│  │4│  │8│  ┃  │5│  │3│  │1│  ┃  │6│  │7│  │2│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│2│  │7│  │5│  ┃  │6│  │4│  │9│  ┃  │8│  │3│  │1│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│6│  │3│  │1│  ┃  │8│  │2│  │7│  ┃  │5│  │4│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│  │9│  │2│  ┃  │1│  │8│  │5│  ┃  │7│  │6│  │3│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │8│  │7│  ┃  │9│  │6│  │2│  ┃  │4│  │1│  │5│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │1│  │6│  ┃  │3│  │7│  │4│  ┃  │9│  │2│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘"
`;

exports[`ruleOnlyCellCanBeValue: medium board 1`] = `
"12   12   12   ┃  ┌─┐  ┌─┐  1    ┃       ┌─┐  ┌─┐
       6       ┃  │5│  │3│       ┃    6  │8│  │4│
7 9    9  7 9  ┃  └─┘  └─┘  7    ┃    9  └─┘  └─┘
               ┃                 ┃               
1    1 3  1 3  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐         3
      5    5   ┃  │6│  │4│  │9│  ┃  │2│   5    5 
78    8   7    ┃  └─┘  └─┘  └─┘  ┃  └─┘       7  
               ┃                 ┃               
       3  ┌─┐  ┃  ┌─┐  ┌─┐       ┃    3  ┌─┐    3
      56  │4│  ┃  │8│  │2│       ┃   56  │1│   56
7 9    9  └─┘  ┃  └─┘  └─┘  7    ┃    9  └─┘  7  
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
1    1    1    ┃  ┌─┐  1    1    ┃  ┌─┐  ┌─┐  ┌─┐
      5    5   ┃  │4│   5     6  ┃  │8│  │3│  │2│
7 9    9  7 9  ┃  └─┘    9       ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  1 3  1 3  ┃  ┌─┐  1    ┌─┐  ┃  ┌─┐  ┌─┐     
│6│   5    5   ┃  │2│   5   │8│  ┃  │7│  │4│   5 
└─┘    9    9  ┃  └─┘    9  └─┘  ┃  └─┘  └─┘     
               ┃                 ┃               
┌─┐   23  ┌─┐  ┃  ┌─┐         3  ┃  ┌─┐  ┌─┐     
│4│   5   │8│  ┃  │7│   5     6  ┃  │1│  │9│   56
└─┘       └─┘  ┃  └─┘            ┃  └─┘  └─┘     
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  1    ┃    3  ┌─┐  ┌─┐  ┃    3  ┌─┐  ┌─┐
│5│  │4│       ┃       │6│  │2│  ┃       │7│  │8│
└─┘  └─┘    9  ┃    9  └─┘  └─┘  ┃       └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │7│  │6│  ┃  │1│  │8│  │5│  ┃  │4│  │2│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
 2    2    2   ┃    3  ┌─┐  ┌─┐  ┃    3       ┌─┐
               ┃       │7│  │4│  ┃   56   56  │1│
 89   89    9  ┃    9  └─┘  └─┘  ┃            └─┘"
`;

exports[`ruleOnlyCellCanBeValue: medium board stuck 1`] = `
" 2         2   ┃  ┌─┐  ┌─┐  ┌─┐  ┃       ┌─┐  ┌─┐
       6       ┃  │5│  │3│  │1│  ┃    6  │8│  │4│
7 9    9  7 9  ┃  └─┘  └─┘  └─┘  ┃    9  └─┘  └─┘
               ┃                 ┃               
1    1 3    3  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐       ┌─┐
      5    5   ┃  │6│  │4│  │9│  ┃  │2│   5   │7│
 8    8        ┃  └─┘  └─┘  └─┘  ┃  └─┘       └─┘
               ┃                 ┃               
          ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃       ┌─┐  ┌─┐
      56  │4│  ┃  │8│  │2│  │7│  ┃   56  │1│  │3│
  9    9  └─┘  ┃  └─┘  └─┘  └─┘  ┃    9  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
1    1         ┃  ┌─┐  1    ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
      5    5   ┃  │4│       │6│  ┃  │8│  │3│  │2│
7 9    9  7 9  ┃  └─┘    9  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  1 3    3  ┃  ┌─┐  1    ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│6│            ┃  │2│       │8│  ┃  │7│  │4│  │5│
└─┘    9    9  ┃  └─┘    9  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│  │2│  │8│  ┃  │7│  │5│  │3│  ┃  │1│  │9│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│5│  │4│  │1│  ┃  │9│  │6│  │2│  ┃  │3│  │7│  │8│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│3│  │7│  │6│  ┃  │1│  │8│  │5│  ┃  │4│  │2│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
 2         2   ┃  ┌─┐  ┌─┐  ┌─┐  ┃            ┌─┐
               ┃  │3│  │7│  │4│  ┃   56   56  │1│
 89   89    9  ┃  └─┘  └─┘  └─┘  ┃            └─┘"
`;
